# broken-toy-shop

./: .pre-commit-config.yaml  README.md  docker-compose.yml
app/: pyproject.toml
app/toy_shop/: asgi.py  settings.py  urls.py  wsgi.py
app/toys/: admin.py  apps.py  models.py  urls.py  views.py
app/toys/migrations/: 0001_initial.py  0002_toy_check_quantity_constraint.py  0003_alter_order_user.py
